# openai-chatbot-memory

./: .gitignore  README.md  branch-structure.md  debug_hashing.py  pyproject.toml  requirements.txt  run_tests.sh  validate_workflow.py  workflow_test.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: clean-test.yml  python-tests.yml  test-pr.yml
memory/: __init__.py  embedding_memory.py  secure_memory.py
security/: __init__.py  encryption.py  hashing.py
tests/: README.md  __init__.py  conftest.py  test_embedding_memory.py  test_encryption.py  test_hashing.py  test_secure_memory.py
