[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openai-chatbot-memory"
version = "0.1.0"
description = "A self-hosted memory system for AI chatbots with privacy features"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]

[project.urls]
"Homepage" = "https://github.com/your-username/openai-chatbot-memory"
"Bug Tracker" = "https://github.com/your-username/openai-chatbot-memory/issues"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "--import-mode=importlib",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["memory", "security"]
omit = ["tests/*", "**/__init__.py"]

[tool.black]
line-length = 88 